tests/snapshots/init__use_crate_via_bianry_output.snap
---
source: tests/init.rs
expression: output
---
Websites you compete in:
1 AtCoder
2 Codeforces
3 yukicoder
Space-delimited numbers (defaults to all): Do you use crates on AtCoder?
1 No
2 Yes
3 Yes, but I submit base64-encoded programs
Number:        Wrote {{ cwd }}{{ separator }}.gitignore
       Wrote {{ cwd }}{{ separator }}atcoder{{ separator }}Cargo.toml
       Wrote {{ cwd }}{{ separator }}atcoder{{ separator }}compete.toml
     Created `cargo-compete-template` package at {{ cwd }}{{ separator }}atcoder{{ separator }}cargo-compete-template
    Updating {{ cwd }}{{ separator }}atcoder{{ separator }}Cargo.lock
       Wrote {{ cwd }}{{ separator }}codeforces{{ separator }}Cargo.toml
       Wrote {{ cwd }}{{ separator }}codeforces{{ separator }}rust-toolchain
       Wrote {{ cwd }}{{ separator }}codeforces{{ separator }}compete.toml
     Created `cargo-compete-template` package at {{ cwd }}{{ separator }}codeforces{{ separator }}cargo-compete-template
    Updating {{ cwd }}{{ separator }}codeforces{{ separator }}Cargo.lock
       Wrote {{ cwd }}{{ separator }}yukicoder{{ separator }}Cargo.toml
       Wrote {{ cwd }}{{ separator }}yukicoder{{ separator }}rust-toolchain
       Wrote {{ cwd }}{{ separator }}yukicoder{{ separator }}compete.toml
     Created `cargo-compete-template` package at {{ cwd }}{{ separator }}yukicoder{{ separator }}cargo-compete-template
    Updating {{ cwd }}{{ separator }}yukicoder{{ separator }}Cargo.lock

